# A2A_Chat_Bot

./: .gitignore  README.md  docker-compose.yml
a2a_langchain_agent_advanced/: .env.example  README.md  __main__.py  agent.py  agent_executor.py  pyproject.toml  test_client.py
a2a_langchain_agent_advanced/orchestrator/: agent.py
a2a_langchain_agent_advanced/orchestrator/.adk/: session.db
backend/: .env.example  Dockerfile  __init__.py  database.py  deps.py  main.py  models.py  pyproject.toml  schemas.py  test_stt_ws.py
backend/core/: auth_utils.py  config.py
backend/routes/: agents.py  auth.py  playground.py  prompts.py  sessions.py  stt.py
backend/services/: agent_registry.py  agent_service.py  agent_transport.py  file_extract.py  serialization.py  session_intelligence.py  stt_service.py
dummy_fastapi_agent/: README.md  __main__.py  pyproject.toml
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: AppHeader.jsx  ConnectAgentModal.jsx  FlashMessages.jsx  MarkdownMessage.jsx  SpeechToTextControl.jsx
frontend/src/lib/: api.js
frontend/src/lib/speech/: useBrowserSpeechToText.js  useSpeechToText.js
frontend/src/pages/: AgentDetailPage.jsx  AgentsPage.jsx  ChatPage.jsx  LoginPage.jsx  PlaygroundPage.jsx  PromptsPage.jsx
